fixed alignment of elements on index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 * {
     padding: 0;
-    margin: 0;
+    margin: auto;
     box-sizing: border-box;
 }
 
@@ -16,6 +16,7 @@
 }
 
 body {
+    margin: auto;
     position: relative;
     width: 1440px;
     height: 1024px;
